--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>ci-parent-project</artifactId>
+    <groupId>com.lvw.ci</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
   <groupId>com.lvw.ci</groupId>
-  <artifactId>ci-parent-project</artifactId>
+  <artifactId>service</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>ci-parent-project</name>
-
-  <packaging>pom</packaging>
-
-  <modules>
-    <module>service</module>
-  </modules>
+  <name>service</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>18</maven.compiler.release>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <dependencies>
